--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "dependencies": {
     "antd-mobile": "^2.0.2",
+    "asset-require-hook": "^1.2.0",
     "autoprefixer": "7.1.2",
     "axios": "^0.17.0",
     "babel-core": "6.25.0",
@@ -48,12 +49,20 @@
     "webpack": "3.5.1",
     "webpack-dev-server": "2.8.2",
     "webpack-manifest-plugin": "1.2.1",
-    "whatwg-fetch": "2.0.3"
+    "whatwg-fetch": "2.0.3",
+    "body-parser": "^1.18.2",
+    "cookie-parser": "^1.4.3",
+    "express": "^4.16.2",
+    "md5": "^2.2.1",
+    "mongoose": "^4.13.0",
+    "qn": "^1.3.0",
+    "socket.io": "^2.0.4"
   },
   "scripts": {
     "start": "node scripts/start.js",
     "build": "node scripts/build.js",
-    "test": "node scripts/test.js --env=jsdom"
+    "test": "node scripts/test.js --env=jsdom",
+    "server": "NODE_ENV=test nodemon --exec babel-node server-react-gachat/app.js"
   },
   "jest": {
     "collectCoverageFrom": [
@@ -79,6 +88,7 @@
     "moduleNameMapper": {
       "^react-native$": "react-native-web"
     },
+    "homepage": ".",
     "moduleFileExtensions": [
       "web.js",
       "js",
@@ -105,10 +115,17 @@
   },
   "proxy": "http://localhost:3002",
   "eslintConfig": {
-    "extends": "react-app"
+    "extends": "react-app",
+    "rules": {
+      "eqeqeq": [
+        0
+      ]
+    }
   },
   "devDependencies": {
+    "babel-cli": "^6.26.0",
     "babel-plugin-import": "^1.6.2",
-    "babel-plugin-transform-decorators-legacy": "^1.3.4"
+    "babel-plugin-transform-decorators-legacy": "^1.3.4",
+    "css-modules-require-hook": "^4.2.3"
   }
 }
